# map-matching-2

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  help.txt
cmake/: native.cmake
data/: README.md
data/floating-car-data/: .gitignore  README.md  ground_truth.csv  points.csv
data/floating-car-data/conf/: compare.conf  match.conf  match_raw.conf  prepare.conf  prepare_all.conf
data/gis-cup/: .gitignore  README.md
data/gis-cup/conf/: compare.conf  ground_truth.conf  match.conf  prepare.conf
data/hengfeng-li/: .gitignore  README.md
data/hengfeng-li/conf/: compare.conf  compare_osm.conf  ground_truth.conf  match.conf  match_osm.conf  prepare.conf  prepare_ground_truth.conf  prepare_osm.conf
data/kubicka-et-al/: .gitignore  README.md
data/kubicka-et-al/conf/: compare.conf  compare_edges.conf  ground_truth.conf  match.conf  match_edges.conf  prepare.conf  prepare_ground_truth.conf
data/newson-krumm/: .gitignore  README.md
data/newson-krumm/conf/: compare.conf  ground_truth.conf  match.conf  prepare.conf
deploy/appimage/: package.sh
deploy/appimage/data/: map_matching_2.desktop
deploy/help/: help.sh
deploy/licenses/: update.sh
deploy/test/: Dockerfile  test.sh
docker/appimage/: Dockerfile
docker/debug/: Dockerfile
docker/release/: Dockerfile
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/app/include/app/: compare.hpp  general.hpp  global.hpp  match.hpp  match_cli.hpp  match_web.hpp  mode.hpp  network.hpp  options.hpp  prepare.hpp  settings.hpp  version.hpp.in
src/app/src/app/: compare.cpp  general.cpp  global.cpp  match.cpp  match_cli.cpp  mode.cpp  network.cpp  options.cpp  prepare.cpp  settings.cpp
src/environment/: CMakeLists.txt
src/environment/environments/: hmm.cpp  hmm.hpp  single.cpp  single.hpp  single_performance.cpp  single_performance.hpp
src/geometry/: CMakeLists.txt  compare.cpp  compare.hpp  multi_rich_line.cpp  multi_rich_line.hpp  rich_line.cpp  rich_line.hpp  rich_segment.cpp  rich_segment.hpp  substring.cpp  substring.hpp  traits.hpp  types.hpp  util.cpp  util.hpp
src/geometry/network/: edge.cpp  edge.hpp  graph.hpp  network.cpp  network.hpp  node.cpp  node.hpp  route.cpp  route.hpp  tag_helper.cpp  tag_helper.hpp  types.hpp
src/geometry/track/: measurement.cpp  measurement.hpp  multi_track.cpp  multi_track.hpp  track.cpp  track.hpp  types.hpp
src/io/: CMakeLists.txt  csv_exporter.cpp  csv_exporter.hpp  csv_importer.cpp  csv_importer.hpp  exporter.cpp  exporter.hpp  file_exporter.cpp  file_exporter.hpp  importer.cpp  importer.hpp
src/io/memory_mapped/: memory_mapped_file.hpp
src/io/network/: arc_node_importer.cpp  arc_node_importer.hpp  melbourne_importer.hpp  network_loader.cpp  network_loader.hpp  network_saver.cpp  network_saver.hpp  osm_car_importer.cpp  osm_car_importer.hpp  osm_exporter.cpp  osm_exporter.hpp  osm_handler.cpp  osm_handler.hpp  osm_importer.cpp  osm_importer.hpp  osm_relations_manager.cpp  osm_relations_manager.hpp  seattle_importer.hpp
src/io/track/: csv_track_importer.cpp  csv_track_importer.hpp  edges_list_importer.cpp  edges_list_importer.hpp  gpx_track_importer.cpp  gpx_track_importer.hpp  input_importer.cpp  input_importer.hpp  seattle_ground_truth_importer.hpp
src/learning/: CMakeLists.txt  settings.hpp
src/learning/algorithms/: policy_iteration.cpp  policy_iteration.hpp  policy_iteration_performance.cpp  policy_iteration_performance.hpp  q_learning.cpp  q_learning.hpp  q_learning_performance.cpp  q_learning_performance.hpp  value_iteration.cpp  value_iteration.hpp  value_iteration_performance.cpp  value_iteration_performance.hpp  viterbi.cpp  viterbi.hpp
src/matching/: CMakeLists.txt  candidate.cpp  candidate.hpp  candidate_edge.cpp  candidate_edge.hpp  candidate_node.cpp  candidate_node.hpp  detector.cpp  detector.hpp  matcher.cpp  matcher.hpp  settings.hpp  types.hpp
src/util/: CMakeLists.txt  benchmark.cpp  benchmark.hpp
tests/: CMakeLists.txt  compare_tests.cpp  concept_inheritance.cpp  graph_algorithm_tests.cpp  graph_storage_tests.cpp  graph_tests.cpp  library_tests.cpp  matcher_test.cpp  matcher_tests.cpp  memory_mapped_index_tests.cpp  memory_mapped_integration_tests.cpp  memory_mapped_tests.cpp  memory_mapped_wrapper_tests.cpp  model_algorithm_tests.cpp  model_tests.cpp  network_test.cpp  network_tests.cpp  route_tests.cpp  serialization_tests.cpp  util_tests.cpp
tests/helper/: cache_fixture.hpp  geometry_helper.hpp  matcher_fixture.hpp  network_fixture.hpp
